# service/api/user_get_friends.go
@@ -1,34 +1,0 @@
-package api
-
-import (
-	"encoding/json"
-	"net/http"
-
-	"github.com/GioiaZheng/Wasa_proj/service/reqcontext"
-	"github.com/julienschmidt/httprouter"
-)
-
-func (rt *_router) getUserFriends(w http.ResponseWriter, r *http.Request, _ httprouter.Params, ctx reqcontext.RequestContext) {
-	userID := ctx.UserID
-	if userID == "" {
-		http.Error(w, "Unauthorized", http.StatusUnauthorized)
-		return
-	}
-
-	friends, err := rt.db.GetFriendsList(userID)
-	if err != nil {
-		http.Error(w, "Failed to get friends", http.StatusInternalServerError)
-		return
-	}
-
-	resp := map[string]interface{}{
-		"code":    200,
-		"message": "Friends list retrieved successfully",
-		"data": map[string]interface{}{
-			"friends": friends,
-		},
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(resp)
-}
